--- a/config-services/src/main/resources/application.yml
+++ b/config-services/src/main/resources/application.yml
@@ -1,8 +1,15 @@
+
 server:
   port: 8090
 
 spring:
-    application:
-        name: config-services
-    profiles:
-        active: native
+  application:
+    name: config-service
+  cloud:
+    config:
+      server:
+        git:
+          uri: https://github.com/Robert-VSol/java-academia-ms-country-services
+          clone-on-start: true
+#  profiles:
+#    active: native
