--- a/country-service/src/main/resources/application.yml
+++ b/country-service/src/main/resources/application.yml
@@ -1,11 +1,22 @@
-server:
-    port: 8088
-
 spring:
   application:
     name: country-service
+  config:
+    import: "optional:configserver:http://localhost:8090"
+  cloud:
+    config:
+      profile: dev
+  datasource:
+    url: jdbc:h2:mem:country
+    driver-class-name: org.h2.Driver
+    username: sa
+    password: password
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+    defer-datasource-initialization: true
+    hibernate:
+      ddl-auto: update
+  h2:
+    console:
+      enabled: true
 
-eureka:
-  client:
-    service-url:
-      default-zone: http://localhost:8761/eureka/
